fix: adjust layout gaps and add responsive styles for header and presentation sections

--- a/html-css/Alura/Repositorio/styles/style.css
+++ b/html-css/Alura/Repositorio/styles/style.css
@@ -44,13 +44,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* gap: 5%; */
+    gap: 5%;
 }
 .apresentacao__conteudo{
     width: 50%;
     display: flex;
     flex-direction: column;
-    /* gap: 1.2rem; */
+    gap: 1.2rem;
 }
 .apresentacao__conteudo__titulo{
     font-size: 2rem;
@@ -108,4 +108,16 @@ body{
     font-family: var(--fonte-secundaria);
     font-size: 1rem;
     font-weight: 600;
+}
+
+@media(max-width:1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
 }
